--- a/examples/ble/ble_firmata/.project
+++ b/examples/ble/ble_firmata/.project
@@ -24,4 +24,11 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/servo.cpp</name>
+			<type>1</type>
+			<locationURI>WORKSPACE_LOC/uCXpresso.BLE/extensions/lib/motor/servo/servo.cpp</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
